<resources>
    <string name="app_name">SMart_Calc</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="clear">CLEAR</string>
    <string name="_plus">+</string>
    <string name="textview_op">textView_op</string>
    <string name="_minus">-</string>
    <string name="_multiplication">x</string>
    <string name="_division">÷</string>
    <string name="_square">x^2"</string>
    <string name="_raiseTo">x^y</string>
    <string name="_radian">Radian</string>
    <string name="_trignometry">Trignometry functions</string>
    <string name="_factorial">x!</string>
    <string name="textview_res">textView_res</string>
    <string name="_percentage">%</string>
    <string name="_sign">+/-</string>
    <string name="_equal">=</string>
    <string name="_dot">.</string>
    <string name="_0">0</string>
    <string name="back">BACK</string>
    <string name="x_2">X^2</string>
    <string name="x_3">X^3</string>
    <string name="tv_res"></string>
    <string name="tv_op"></string>
</resources>
